# GASAL2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
include/gasal2/: Timer.h  args_parser.h  ctors.h  gasal.h  gasal_align.h  gasal_header.h  gasal_kernels.h  host_batch.h  interfaces.h  read_fasta.h  res.h  rutils.h
regression_test/: .gitignore  original_banded  original_standard  original_start  original_tb  quick_regression_test.sh
src/: args_parser.cpp  ctors.cpp  ctors.cu  gasal.h  gasal_align.cu  host_batch.cpp  host_batch.cu  interfaces.cpp  read_fasta.cpp  res.cpp
src/kernels/: banded.cu  banded.cuh  banded.h  get_tb.cu  get_tb.cuh  get_tb.h  global.cu  global.cuh  global.h  ksw_kernel_template.cu  ksw_kernel_template.cuh  ksw_kernel_template.h  local_kernel_template.cu  local_kernel_template.cuh  local_kernel_template.h  pack_rc_seqs.cu  pack_rc_seqs.cuh  pack_rc_seqs.h  semiglobal_kernel_template.cu  semiglobal_kernel_template.cuh  semiglobal_kernel_template.h  tests.cu
test_prog/: test_prog.cpp
unittests/: packing.cu  test_page_locked_string.cu  test_read_fasta.cpp  test_timer.cpp
